--- a/claroline/css/default.css
+++ b/claroline/css/default.css
@@ -34,6 +34,7 @@ h3{	font-size: 110%; }
 #topBanner h1
 {
 	margin: 0px;
+	font-size: 120%;
 }
 
 #topBanner h2
@@ -50,11 +51,6 @@ h3{	font-size: 110%; }
 	color: #FFF;
 	background-color:#006;
 	padding: 4px;
-}
-
-#platformBanner h1
-{
-	fon-t-size: 120%;
 }
 
 #platformBanner a,
