--- a/claroline/css/corporate.css
+++ b/claroline/css/corporate.css
@@ -61,14 +61,9 @@ h3{	font-size: 110%; }
     color: #FFB848;
 }
 
-#topBanner h1
-{
-	margin: 0px;
-}
-
 #topBanner h2
 {
-	margin: 0px;
+	margin: 0;
 }
  /*----------------------------------------------------------------------------
                                   CAMPUS LINE
@@ -82,6 +77,7 @@ h3{	font-size: 110%; }
 
 #platformBanner h1
 {
+	margin: 0;
 	font-size: 120%;
 }
 
@@ -130,6 +126,7 @@ h3{	font-size: 110%; }
 {
 	 display: inline;
 	 font-size: 115%;
+	 margin: 0px;
 }
 
 #userLinks
