--- a/claroline/css/print.css
+++ b/claroline/css/print.css
@@ -5,12 +5,18 @@ body
 	color: black;
 }
   
+img { border: none; }
+
+#userBanner { display: none;}
+#breadCrumbLine { display: none; }
+#courseToolList{ display: none; }
+
+
 a:link, a:visited 
 {
 	background: white; 
 	color: black; 
 	text-decoration: underline;
-	font-weight: bold;
 }
 
 h1, h2, h3 
@@ -19,4 +25,14 @@ h1, h2, h3
 	color: black; 
 	padding-bottom: 1px;
 	border-bottom: 1px solid gray;
+}
+
+#platformBanner h1 a
+{
+	text-decoration: none;
+}
+
+.claroTable .headerX th
+{
+	font-weight: bold;
 }
