- use printf instead of echo in long string  include cours and platformname - italize poweredby div - reverse manager's div to natural order - call platform manager as administrator

--- a/claroline/css/default.css
+++ b/claroline/css/default.css
@@ -281,10 +281,11 @@ h3{	font-size: 110%; }
 }
 
 
-#poweredBy 
+#poweredBy
 {
-	clear: both;
-	text-align: center;
+    clear: both;
+    text-align: center;
+    font-style: italic;
 }
 
 
