change breadcrumb style, breadcrumb is not a list anymore

--- a/claroline/css/corporate.css
+++ b/claroline/css/corporate.css
@@ -225,7 +225,7 @@ h3{	font-size: 110%; }
                                   BREAD CRUMB LINE
  ----------------------------------------------------------------------------*/
 
-#breadCrumbLine
+#breadcrumbLine
 {
 	background-color: #E5E5E5;
 	border: none;
@@ -233,49 +233,27 @@ h3{	font-size: 110%; }
 	padding-bottom: 5px;
 }
 
-#breadCrumbLine ul
-{
-	float: left;
-	margin: 0;
-	padding: 0;
-}
-
-#breadCrumbLine ul li
-{
-	display: inline;
-	margin: 0;
-	padding-left: 12px;
-	padding-right: 2px;
-	background-image: url(corporate/arrow.gif);
-	background-repeat: no-repeat;
-	background-position: 0 .5em;
-}
-
-#breadCrumbLine #home
-{
-	margin: 0;
-	border: none;
-	list-style-type: none;
-	padding-left: 0;
-	background: none;
-}
-
-#breadCrumbLine a,
-#breadCrumbLine a:active,
-#breadCrumbLine a:link,
-#breadCrumbLine a:visited
+#breadcrumbLine a,
+#breadcrumbLine a:active,
+#breadcrumbLine a:link,
+#breadcrumbLine a:visited
 {
 	color:#333;
 }
 
-#breadCrumbLine a:hover
+#breadcrumbLine a:hover
 {
 	color:#369;
 }
 
-#breadCrumbLine hr
+#breadcrumbLine hr
 {
 	display: none;
+}
+
+#breadcrumb
+{
+	float: left;
 }
 
 #toolViewOption
