--- a/claroline/css/default.css
+++ b/claroline/css/default.css
@@ -202,42 +202,21 @@ h3{	font-size: 110%; }
                                   BREAD CRUMB TRAIL
  ----------------------------------------------------------------------------*/
 
-#breadCrumbLine
+#breadcrumbLine
 {
 	border: none;
 	font-size: 80%;
 	padding-bottom: 5px;
 }
 
-#breadCrumbLine ul
-{
-	float: left;
-	margin: 0;
-	padding: 0;
-}
-
-#breadCrumbLine ul li
-{
-	display: inline;
-	margin: 0;
-	padding-left: 10px;
-	background-image: url(corporate/arrow.gif);
-	background-repeat: no-repeat;
-	background-position: 0 .5em;
-}
-
-#breadCrumbLine #home
-{
-	margin: 0;
-	border: none;
-	list-style-type: none;
-	padding-left: 0;
-	background: none;
-}
-
-#breadCrumbLine hr
+#breadcrumbLine hr
 {
 	display: none;
+}
+
+#breadcrumb
+{
+	float: left;
 }
 
 #toolViewOption
