--- a/claroline/css/default.css
+++ b/claroline/css/default.css
@@ -389,6 +389,9 @@ h3{	font-size: 110%; }
 
 .claroIntroSection { 
 	background-color: #F5F5F5;
+	padding: 5px;
+	margin-top : 5px;
+	margin-bottom: 5px;
 }
 
 /*
